recursion.cons.remove.Remove.scala.error
Erreur de compilation :
Remove:9: error: type mismatch;
 found   : (List[Int], Int)
 required: List[Int]
      return(l.tail,v-1)
            ^